--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <ul class="text-center dropdown-menu dropdown-menu-dark" aria-labelledby="servicesDropdown">
                             <li><a data-bss-hover-animate="flash" class="dropdown-item" href="#evaluation">التقييم العقاري</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a data-bss-hover-animate="flash" class="dropdown-item" href="#real_estate_studies">الدراسات والبحوث العقارية</a></li>
+                            <li><a data-bss-hover-animate="flash" class="dropdown-item" href="realeatatestudy.html">الدراسات والبحوث العقارية</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a data-bss-hover-animate="flash" class="dropdown-item" href="#property_management">إدارة الأملاك والمرافق</a></li>
                             <li><hr class="dropdown-divider"></li>
