--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>نهضة الخليج العقارية</title>
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/AF_Jeddah.css">
@@ -25,6 +26,8 @@
     <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/css/css/animate.min.css">
@@ -46,14 +49,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/css/css/css/css/custom-css/realestead_study.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/css/aos.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/css/css/css/css/custom-css/realestead_study.css">
 </head>
 
 <body>
@@ -72,22 +73,21 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" style="font-family:BoutrosNewsH1;"> الخدمات </a>
                         <ul class="text-center dropdown-menu dropdown-menu-dark" aria-labelledby="servicesDropdown">
-                            <li><a data-bss-hover-animate="flash" class="dropdown-item" href="#evaluation">التقييم العقاري</a></li>
+                            <li><a class="dropdown-item" href="evaluation.html">التقييم العقاري</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a data-bss-hover-animate="flash" class="dropdown-item" href="realeatatestudy.html">الدراسات والبحوث العقارية</a></li>
+                            <li><a class="dropdown-item" href="realeatatestudy.html">الدراسات والبحوث العقارية</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a data-bss-hover-animate="flash" class="dropdown-item" href="#property_management">إدارة الأملاك والمرافق</a></li>
+                            <li><a class="dropdown-item" href="#property_management">إدارة الأملاك والمرافق</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a data-bss-hover-animate="pulse" class="dropdown-item" href="#marketing">التسويق العقاري</a></li>
+                            <li><a class="dropdown-item" href="#marketing">التسويق العقاري</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a data-aos="fade" class="dropdown-item" href="#auctions">مزادات المنصة العقارية</a></li>
+                            <li><a class="dropdown-item" href="#auctions">مزادات المنصة العقارية</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="gallery.html" style="font-family:BoutrosNewsH1;">معرض الصور</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about" style="font-family:BoutrosNewsH1;">مـزادات</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about" style="font-family:BoutrosNewsH1;">العـروض</a></li>
-                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="flash" href="#about" style="font-family:BoutrosNewsH1;">معلومات عنا</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family:BoutrosNewsH1;">معلومات عنا</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact" style="font-family:BoutrosNewsH1;">اتصل بنا</a></li>
                 </ul>
             </div>
@@ -340,7 +340,7 @@
                 </div>
             </div>
         </div>
-    </section><a class="btn wh-link" role="button" style="border-radius:40px;width:60px;height:61px;padding-top:5px;padding-right:18px;padding-bottom:0;padding-left:10px;" rel="prefetch" href="https://wa.me/966543434447" target="_blank"><i class="fab fa-whatsapp" style="font-size: 46px;width: 42px;height: 52px;padding-left: 0px;padding-bottom: 0px;padding-right: 0px;padding-top: 0px;margin-left: 0px;margin-right: -6px;"></i></a>
+    </section><a class="btn wh-link" role="button" style="border-radius:40px;width:60px;height:61px;padding-top:5px;padding-right:18px;padding-bottom:0;padding-left:10px;" rel="prefetch" href="https://wa.me/966543434447" target="_blank"><i class="fab fa-whatsapp" style="font-size:46px;width:38px;height:26px;padding-left:0px;padding-bottom:0px;padding-right:0px;padding-top:0px;margin-left:0px;margin-right:-6px;"></i></a>
     <footer class="footer-top">
         <div class="container">
             <div class="row justify-content-between">
@@ -394,21 +394,13 @@
             </div>
             <p class="text-center mt-4" style="font-family:BoutrosNewsH1;">© 2024 نهضة الخليج العقارية. جميع الحقوق محفوظة.</p>
         </div>
-    </footer><script>
-    $(document).ready(function () {
-    if ($('.counterUp').length) {
-    $('.counterUp').counterUp({
-    delay: 10,    // Delay in milliseconds per count
-    time: 2000    // Total time for the animation
-    });
-    }
-    });
-    </script>
+    </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/aos.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/js/aos.min.js"></script>
     <script src="assets/js/js/bs-init.js"></script>
     <script src="assets/js/js/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/js/js/bs-init.js"></script>
@@ -425,11 +417,20 @@
     <script src="assets/js/js/js/js/bs-init.js"></script>
     <script src="assets/js/js/js/js/bold-and-bright.js"></script>
     <script src="assets/js/js/js/js/bootstrap.min.js"></script>
-    <script src="assets/js/js/js/js/custom-js/gallery.js"></script>
     <script src="assets/js/js/js/aos.min.js"></script>
-    <script src="assets/js/js/js/js/custom-js/index.js"></script>
     <script src="assets/js/js/js/js/custom-js/realestead_study.js"></script>
-    <script src="assets/js/js/aos.min.js"></script>
+    <script src="assets/js/js/js/js/custom-js/gallery.js"></script>
+    <script src="assets/js/js/js/js/custom-js/index.js"></script>
+<script>
+    $(document).ready(function () {
+        if ($('.counterUp').length) {
+            $('.counterUp').counterUp({
+                delay: 10,    // Delay in milliseconds per count
+                time: 2000    // Total time for the animation
+            });
+        }
+    });
+</script>
 </body>
 
 </html>
