--- a/realeatatestudy.html
+++ b/realeatatestudy.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>خدمة الدراسات العقارية</title>
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/css/AF_Jeddah.css">
@@ -25,6 +26,8 @@
     <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/css/css/animate.min.css">
@@ -46,14 +49,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/css/css/css/css/custom-css/realestead_study.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/css/aos.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/css/css/css/css/custom-css/realestead_study.css">
 </head>
 
 <body class="sticky-header">
@@ -61,13 +62,13 @@
     <header class="rt-header sticky-on" style="background:#212529;color:rgb(252,252,252);">
         <div class="container"></div>
     </header>
-    <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark" style="direction:ltr;">
+    <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark" style="direction: ltr">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><img class="d-inline-block wobble animated infinite align-text-top me-2" src="assets/img/favicon.png" alt="Logo" width="40" height="40"><span style="font-family:'Cairo', sans-serif;">نهضة الخليج العقارية</span></a><button data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" style="font-family: BoutrosNewsH1;padding-left: 20px;"> الخدمات </a>
+                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" style="font-family:BoutrosNewsH1;"> الخدمات </a>
                         <ul class="text-center dropdown-menu dropdown-menu-dark" aria-labelledby="servicesDropdown">
-                            <li><a class="dropdown-item" href="#evaluation">التقييم العقاري</a></li>
+                            <li><a class="dropdown-item" href="evaluation.html">التقييم العقاري</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="realeatatestudy.html">الدراسات والبحوث العقارية</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -75,16 +76,14 @@
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#marketing">التسويق العقاري</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#imaging3D">تصوير العقارات بتقنية(3D - VR)</a></li>
-                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#auctions">مزادات المنصة العقارية</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="gallery.html" style="font-family: BoutrosNewsH1;padding-left: 20px;">معرض الصور</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family: BoutrosNewsH1;padding-left: 20px;">مـزادات</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family: BoutrosNewsH1;padding-left: 20px;">العـروض</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family: BoutrosNewsH1;padding-left: 20px;">معلومات عنا</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact" style="font-family: BoutrosNewsH1;margin-right: 0px;padding: 8px;padding-right: 8px;padding-left: 20px;">اتصل بنا</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html" style="font-family:BoutrosNewsH1;">معرض الصور</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family:BoutrosNewsH1;">مـزادات</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family:BoutrosNewsH1;">العـروض</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about" style="font-family:BoutrosNewsH1;">معلومات عنا</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact" style="font-family:BoutrosNewsH1;">اتصل بنا</a></li>
                 </ul>
             </div>
         </div>
@@ -93,8 +92,8 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="https://gomenassat.com"><span>الرئيسية</span></a></li>
-                    <li class="breadcrumb-item"><a href="https://gomenassat.com"><span>الخدمات</span></a></li>
+                    <li class="breadcrumb-item"><a href="index.html"><span>الرئيسية</span></a></li>
+                    <li class="breadcrumb-item"><a href="#"><span>الخدمات</span></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><span>دراسات عقارية</span></li>
                 </ol>
             </nav>
@@ -112,23 +111,42 @@
                             <div class="featured-thumb-slider-area">
                                 <div class="feature-box3 swiper-container">
                                     <div class="swiper-wrapper">
-                                        <div data-aos="zoom-in" data-aos-duration="900" data-aos-delay="200" class="swiper-slide"><img src="assets/img/realestate_study.jpeg" alt="دراسات عقارية" width="600" height="466"></div>
+                                        <div data-aos="zoom-in" data-aos-duration="900" data-aos-delay="200" class="swiper-slide aos-init aos-animate">
+                                            <!-- Main Image Container -->
+                                            <div class="image-container">
+                                                <img id="main-image" src="assets/img/realestate_study.jpeg" alt="دراسات عقارية" class="main-image">
+                                                <div id="zoom-image" class="zoom-image"></div>
+                                            </div>
+                                        </div>
                                     </div>
+                                </div>
+                                <!-- Thumbnails -->
+                                <div class="thumbnail-container">
+                                    <img class="thumbnail" src="assets/img/realestate_study.jpeg" alt="Thumbnail 1" width="100" height="78" onclick="changeImage('assets/img/realestate_study.jpeg')">
+                                    <img class="thumbnail" src="assets/img/studies1.jpg" alt="Thumbnail 2" width="100" height="78" onclick="changeImage('assets/img/studies1.jpg')">
+                                    <img class="thumbnail" src="assets/img/studies2.jpg" alt="Thumbnail 3" width="100" height="78" onclick="changeImage('assets/img/studies2.jpg')">
                                 </div>
                             </div>
                             <div class="single-listing-box1">
                                 <div data-aos="zoom-in" data-aos-duration="900" data-aos-delay="200" class="overview-area listing-area">
                                     <h2 class="item-title" style="font-family:'Alarabiya Font';">تفاصيل الخدمة</h2>
-                                    <p style="font-family:Alexandria, sans-serif;">تضم مؤسسة نهضة الخليج العقارية كادر متخصص ومؤهل لعمل دراسات خاصة بالاستثمار العقاري، وتقدم:</p>
-                                    <ol style="font-family:BoutrosNewsH1;font-weight:bold;">
-                                        <li>دراسة أعلى وأفضل استخدام لعقاراتكم.</li>
-                                        <li>دراسات سوقية للمشاريع العقارية.</li>
-                                        <li>تقارير متخصصة عن السوق العقاري في جميع مناطق المملكة.</li>
+                                    <p style="font-family: BoutrosNewsH1;color: rgb(247,192,0);box-shadow: inset 0px 0px;text-shadow: 1px 1px 20px rgb(255,199,2);font-size: 23.6px;font-weight: bold;text-align: center;">تضم مؤسسة نهضة الخليج العقارية كادر متخصص ومؤهل لعمل دراسات خاصة بالاستثمار العقاري </p>
+                                    <ol style="font-family: BoutrosNewsH1;font-weight: bold;margin-bottom: 17px;">
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">دراسة أعلى وأفضل استخدام لعقاراتكم.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">دراسات سوقية للمشاريع العقارية.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">تقارير متخصصة عن السوق العقاري في جميع مناطق المملكة.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">نقدم في مؤسسة نهضة الخليج خدمة احترافية وشاملة للدراسات العقارية، تهدف إلى تمكين المستثمرين والأفراد من اتخاذ قرارات استثمارية مدروسة وفعالة.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">تعتمد هذه الخدمة على تحليل متكامل لسوق العقارات، بما في ذلك تقييم المواقع، ودراسة العرض والطلب، وتحليل القيمة السوقية للعقارات، ورصد الفرص الاستثمارية الواعدة.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">تحليل ميداني ودقيق: نجمع بيانات واقعية ومحدثة عن السوق المحلي والإقليمي.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">توصيات مبنية على الأرقام: نوفر تقارير تفصيلية مدعومة بالبيانات لتوجيه قراراتكم الاستثمارية.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">رؤية استراتيجية: نساعدكم على تحديد أفضل الفرص لتحقيق أعلى عائد على الاستثمار.</li>
+                                        <li style="margin-bottom: 5px;padding-top: 5px;">تقارير مخصصة: تُعدّ التقارير بناءً على احتياجات العميل وطبيعة المشروع.</li>
                                     </ol>
+                                    <p style="font-family: BoutrosNewsH1;color: var(--bs-success);font-weight: bold;text-align: center;font-size: 20.6px;">سواء كنت مستثمرًا تخطط للدخول إلى سوق العقارات، أو صاحب مشروع يبحث عن فرص التوسع، فإن خدمة الدراسة العقارية من مؤسسة نهضة الخليج هي شريكك الأمثل لتحقيق أهدافك بثقة ونجاح. </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 widget-break-lg sidebar-widget" data-aos="zoom-in" data-aos-duration="900" data-aos-delay="200">
+                        <div class="col-lg-4 widget-break-lg sidebar-widget" data-aos="zoom-in" data-aos-duration="900" data-aos-delay="200" style="box-shadow: 0px 0px;">
                             <div class="widget widget-contact-box">
                                 <h2 class="widget-subtitle" style="font-family:BoutrosNewsH1;">طلب الخدمة</h2>
                                 <form class="contact-box service_request_form" id="service_request_form"><input type="hidden" name="_token" value="VCqrJc0GPz6iaZXqHVGI6p3pWFL5wfJee4Ld1Pyp">
@@ -147,7 +165,7 @@
                 </div>
             </div>
         </div>
-    </section><a class="btn wh-link" role="button" style="border-radius:40px;" rel="prefetch" href="https://wa.me/966543434447" target="_blank"><i class="fab fa-whatsapp" style="font-size: 46px;width: 41px;height: 40px;padding-left: 0px;padding-bottom: 0px;padding-right: 0px;padding-top: 0px;margin-left: 0px;margin-right: -6px;"></i></a>
+    </section><a class="btn wh-link" role="button" style="border-radius:40px;" rel="prefetch" href="https://wa.me/966543434447" target="_blank"><i class="fab fa-whatsapp" style="font-size:46px;width:35px;height:27px;padding-left:0px;padding-bottom:0px;padding-right:0px;padding-top:0px;margin-left:0px;margin-right:-6px;"></i></a>
     <footer class="footer-top" style="direction:ltr;">
         <div class="container">
             <div class="row justify-content-between">
@@ -207,6 +225,7 @@
     <script src="assets/js/aos.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/js/aos.min.js"></script>
     <script src="assets/js/js/bs-init.js"></script>
     <script src="assets/js/js/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/js/js/bs-init.js"></script>
@@ -223,11 +242,8 @@
     <script src="assets/js/js/js/js/bs-init.js"></script>
     <script src="assets/js/js/js/js/bold-and-bright.js"></script>
     <script src="assets/js/js/js/js/bootstrap.min.js"></script>
-    <script src="assets/js/js/js/js/custom-js/gallery.js"></script>
     <script src="assets/js/js/js/aos.min.js"></script>
-    <script src="assets/js/js/js/js/custom-js/index.js"></script>
     <script src="assets/js/js/js/js/custom-js/realestead_study.js"></script>
-    <script src="assets/js/js/aos.min.js"></script>
 </body>
 
 </html>
