update nav bar in gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -61,15 +61,13 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" style="font-family:BoutrosNewsH1;"> الخدمات </a>
                         <ul class="text-center dropdown-menu dropdown-menu-dark" aria-labelledby="servicesDropdown">
-                            <li><a class="dropdown-item" href="#evaluation">التقييم العقاري</a></li>
+                            <li><a class="dropdown-item" href="evaluation.html">التقييم العقاري</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#real_estate_studies">الدراسات والبحوث العقارية</a></li>
+                            <li><a class="dropdown-item" href="realeatatestudy.html">الدراسات والبحوث العقارية</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#property_management">إدارة الأملاك والمرافق</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#marketing">التسويق العقاري</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#imaging3D">تصوير العقارات بتقنية(3D - VR)</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#auctions">مزادات المنصة العقارية</a></li>
                         </ul>
